# cyborg

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  README.org  backup-apps-list  cyborg  pyproject.toml
.cyborg/: config.ini  exclude
src/cyborg/: cli.py  cyborg.py
src/cyborg/default_config/: README.org  config.ini  cyborg-logrotate.conf  exclude-cloud  exclude-nas
