[project]
name = "cyborg"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sheldon McGrandle", email = "developer@8cylinder.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "platformdirs>=4.9.4",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[project.scripts]
cyborg = "cyborg:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv_build]
include = ["src/cyborg/default_config/**"]
